[package]
name = "incremental-png"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
miniz_oxide = { version = "0.7.1", default_features = false }

[dev-dependencies]
miniz_oxide = { version = "0.7.1", features = ["with-alloc"] }
